fix issue where the dropzone is sometimes shifted to the right

--- a/client/css/common.less
+++ b/client/css/common.less
@@ -178,7 +178,8 @@ p a:hover {
   text-align: center;
   opacity: 0.9; /* all slide on top of each others */
   position: absolute;
-  top: 0;
+  top:0;
+  left: 0;
   height: @dropZoneSize;
   width: @dropZoneSize;
   border: @dropZoneBorder dotted #cacdd0;
